tests/snapshots/tui_snapshots__reconcile_report.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-28_Lullaby_Remix_ID0248  │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ music-video   ·   projects       │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247   scanning… ││ created 2026-08-28               │"
"│  ID0246 2026-┌ needs a look ──────────────────────────────────────────────────────┐              │"
"│  ID0245 2026-│ 1 project(s) were never finished being created and cannot be       │───────────── │"
"│  ID0244 2026-│ rebuilt automatically: 2026-09-01_Half_Made_ID0250                 │              │"
"│  ID0243 2026-│                                                                    │              │"
"│  ID0242 2026-│                                                                    │              │"
"│  ID0241 2026-│                                                                    │              │"
"│  ID0240 2026-│                                                                    │              │"
"│  ID0239 2026-│                                                                    │              │"
"│  ID0238 2026-│                                                                    │              │"
"│  ID0237 2026-│                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              │                                                                    │              │"
"│              └────────────────────────────────────────────────────────────────────┘              │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
" Reconciled: 1 resumed, 0 finished, 1 rolled back, 0 restored, 0 cleared  —  see the report         "
" ↑↓ scroll  Esc close  ? help  c commands                                                           "
