tests/snapshots/tui_snapshots__register_form.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search                                                                       12/12 · newest "
"┌ projects ────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────┐"
"│  ID     PROJECT                                         SIZE ││ 2026-08-28_Lullaby_Remix_ID0248  │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248            scanning… ││ A Fiverr music video: treatment  │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247   scanning… ││ approved, shoot booked           │"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                scanning… ││ music-video   ·   projects       │"
"│  ID0245 2026-08-25_Test_Run_ID0245                 scanning… ││ created 2026-08-28               │"
"│  ID0244 20┌ register a folder ───────────────────────────────────────────────────────┐           │"
"│  ID0243 20│  Register         one folder                                             │────────── │"
"│  ID0242 20│▸ Folder           /mnt/projects/Legacy_Shoot                             │           │"
"│  ID0241 20│  Template         (none)                                                 │           │"
"│  ID0240 20│  Standardize name no                                                     │           │"
"│  ID0239 20│  Created          the folder's own date                                  │           │"
"│  ID0238 20│  Description                                                             │           │"
"│  ID0237 20│ the folder to adopt — it must already exist                              │           │"
"│           │ Enter preview   Esc cancel   Tab next field                              │           │"
"│           └──────────────────────────────────────────────────────────────────────────┘           │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"│                                                              ││                                  │"
"└──────────────────────────────────────────────────────────────┘└──────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
