tests/snapshots/tui_snapshots__search_fuzzy_80x24.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                     highest ID0248 "
" → projects 12   archive not mounted                           ⚠ 1 needs you  ! "
" ⌕ tag:draft lulla                                             2/12 · relevance "
"┌ projects ────────────────────────────────────────────────────────────────────┐"
"│  ID     PROJECT                                     SIZE CREATED    BASE     │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248        scanning… 2026-08-28 projects │"
"│  ID0242 2026-08-22_Lullaby_Remix_ID0242        scanning… 2026-08-22 projects │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
" ↑↓ move  Enter keep  Esc clear / leave  F1 help  Ctrl-p commands               "
