tests/snapshots/tui_snapshots__settings_24_rows.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-fo┌ settings ────────────────────────────────────────────────────────────────────────┐ ID0248 "
" → proje│   Name collision              suffix                                             │ you  ! "
" ⌕ / to │ Appearance                                                                       │ newest "
"┌ projec│   Theme                       auto (follows the terminal)                        │───────┐"
"│  ID   │   Motion                      on                                                 │D0248  │"
"│▸ ID024│ Library bases                                                                    │tment  │"
"│  ID024│   Bases                       (only the base directory)                          │       │"
"│  ID024│   Recent limit                20                                                 │       │"
"│  ID024│ After a project is created                                                       │       │"
"│  ID024│   git init                    no                                                 │       │"
"│  ID024│   Reveal the folder           no                                                 │────── │"
"│  ID024│   Open in the editor          no                                                 │       │"
"│  ID024│   Print the path              no                                                 │       │"
"│  ID024│ ID counter                                                                       │       │"
"│  ID023│   Counter                     248   next: ID0249                                 │       │"
"│  ID023│   Sync every base                                                                │       │"
"│  ID023│ Maintenance                                                                      │       │"
"│       │   Log level                   info                                               │       │"
"│       │   Reindex                                                                        │       │"
"│       │   Reconcile                                                                      │       │"
"│       │▸  Data locations              /home/user/.config/fastf                           │       │"
"└───────│ where the config, the counter and the templates live, and how that was decided   │───────┘"
"        │ ↑↓ choose   / filter   Enter change / run   Esc close   ? help   c commands      │        "
"        └──────────────────────────────────────────────────────────────────────────────────┘        "
