tests/snapshots/tui_snapshots__settings_bases_as_text_short.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-┌ settings ────────────────────────────────────────────────────────┐D0248 "
" → pro│   Date format                 %Y-%m-%d   (today: 2026-09-03)     │ou  ! "
" ⌕ / t│   Editor                      nvim                               │ewest "
"┌ proj│   Terminal                    (probe the known ones)             │─────┐"
"│  ID │   Register pattern            {date}_{name}_{id}                 │D    │"
"│▸ ID0│ Creating a project                                               │8-28 █"
"│  ID0│   Confirm before creating     yes                                │8-27 █"
"│  ID0│   Ask to open after creating  yes                                │8-26 █"
"│  ID0│   Preview lines               20                                 │8-25 █"
"│  ID0│   Name collision              suffix                             │8-24 █"
"│  ID0│ Appearance                                                       │8-23 █"
"│  ID0│┌ one base per line ─────────────────────────────────────────────┐│8-22 █"
"│  ID0││/media/usb/archive                                              ││8-21 █"
"│  ID0││/mnt/shared/clients                                             ││8-20 █"
"│  ID0│└────────────────────────────────────────────────────────────────┘│8-19 ║"
"└─────│ one folder per line — Enter opens the list, Ctrl-S keeps it      │─────┘"
"      │ Ctrl-S keep   Enter new line   Esc leave it unchanged            │      "
"      └──────────────────────────────────────────────────────────────────┘      "
