tests/snapshots/tui_snapshots__settings_basics.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"        ┌ settings ────────────────────────────────────────────────────────────────────────┐        "
" ⌕ / to │ Project basics                                                                   │ newest "
"┌ projec│▸  Base directory              /mnt/projects                                      │───────┐"
"│  ID   │   Default template            music-video                                        │D0248  │"
"│▸ ID024│   Date format                 %Y-%m-%d   (today: 2026-09-03)                     │tment  │"
"│  ID024│   Editor                      nvim                                               │       │"
"│  ID024│   Terminal                    (probe the known ones)                             │       │"
"│  ID024│   Register pattern            {date}_{name}_{id}                                 │       │"
"│  ID024│ Creating a project                                                               │       │"
"│  ID024│   Confirm before creating     yes                                                │────── │"
"│  ID024│   Ask to open after creating  yes                                                │       │"
"│  ID024│   Preview lines               20                                                 │       │"
"│  ID024│   Name collision              suffix                                             │       │"
"│  ID023│ Appearance                                                                       │       │"
"│  ID023│   Theme                       auto (follows the terminal)                        │       │"
"│  ID023│   Motion                      on                                                 │       │"
"│       │ Library bases                                                                    │       │"
"│       │   Bases                       2 extra                                            │       │"
"│       │   Recent limit                20                                                 │       │"
"│       │ After a project is created                                                       │       │"
"│       │   git init                    yes                                                │       │"
"│       │   Reveal the folder           no                                                 │       │"
"│       │   Open in the editor          no                                                 │       │"
"│       │ where new projects are created — empty falls back to your home directory, never …│       │"
"│       │ ↑↓ choose   / filter   Enter change / run   Esc close   ? help   c commands      │       │"
"└───────└──────────────────────────────────────────────────────────────────────────────────┘───────┘"
"                                                                                                    "
"                                                                                                    "
