tests/snapshots/tui_snapshots__sort_picker_80x24.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                     highest ID0248 "
" → projects 12   archive not mounted                           ⚠ 1 needs you  ! "
" ⌕ / to search                                                   12/12 · newest "
"┌ projects ────────────────────────────────────────────────────────────────────┐"
"│  ID     PROJE┌ Sort by ───────────────────────────────────────┐ZE CREATED    │"
"│▸ ID0248 2026-│ ⌕                                              │g… 2026-08-28 │"
"│  ID0247 2026-│                                                │g… 2026-08-27 │"
"│  ID0246 2026-│ newest                                         │g… 2026-08-26 │"
"│  ID0245 2026-│ oldest                                         │g… 2026-08-25 │"
"│  ID0244 2026-│ name                                           │g… 2026-08-24 │"
"│  ID0243 2026-│ name reversed  · z to a                        │g… 2026-08-23 │"
"│  ID0242 2026-│ id                                             │g… 2026-08-22 │"
"│  ID0241 2026-│ id reversed  · the highest ID first            │g… 2026-08-21 │"
"│  ID0240 2026-│ template                                       │g… 2026-08-20 │"
"│  ID0239 2026-│ template reversed  · z to a                    │g… 2026-08-19 │"
"│  ID0238 2026-│ base                                           │g… 2026-08-18 │"
"│  ID0237 2026-│ base reversed  · z to a                        │g… 2026-08-17 │"
"│              │ size                                           │              │"
"│              │ size reversed  · the smallest first            │              │"
"│              └────────────────────────────────────────────────┘              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"                                                                                "
" ↑↓ move  Enter choose  Esc cancel  F1 help  Ctrl-p commands                    "
