tests/snapshots/tui_snapshots__strip_with_orphans.snap
---
source: tests/tui_snapshots.rs
expression: frame
---
" fast-folder   2 bases                                                                                   highest ID0248 "
" → projects 12   archive not mounted                                                                ⚠ 1 needs attention "
"                                                                                                                        "
" ⌕ / to search                                                                                           12/12 · newest "
"┌ projects ────────────────────────────────────────────────────────────┐┌ ID0248 ──────────────────────────────────────┐"
"│  ID     PROJECT                                                 SIZE ││2026-08-28_Lullaby_Remix_ID0248               │"
"│▸ ID0248 2026-08-28_Lullaby_Remix_ID0248                    scanning… ││(registered) · projects · created 2026-08-28  │"
"│  ID0247 2026-08-27_Client_Onboarding_Acme_ID0247           scanning… ││scanning…   ·   0 journal entries             │"
"│  ID0246 2026-08-26_Old_Shoot_ID0246                        scanning… ││tags  ● draft                                 │"
"│  ID0245 2026-08-25_Test_Run_ID0245                         scanning… ││                                              │"
"│  ID0244 2026-08-24_Spring_Campaign_ID0244                  scanning… ││reading…                                      │"
"│  ID0243 2026-08-23_Live_Session_ID0243                     scanning… ││                                              │"
"│  ID0242 2026-08-22_Lullaby_Remix_ID0242                    scanning… ││                                              │"
"│  ID0241 2026-08-21_Client_Onboarding_Acme_ID0241           scanning… ││                                              │"
"│  ID0240 2026-08-20_Old_Shoot_ID0240                        scanning… ││                                              │"
"│  ID0239 2026-08-19_Test_Run_ID0239                         scanning… ││                                              │"
"│  ID0238 2026-08-18_Spring_Campaign_ID0238                  scanning… ││                                              │"
"│  ID0237 2026-08-17_Live_Session_ID0237                     scanning… ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"│                                                                      ││                                              │"
"└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────┘"
"┌ templates ─────────────────────────────────────────────────────────────┐┌ template ──────────────────────────────────┐"
"│  client-project 2  general 2  music-video 1  registered 5 …            ││ Client project · 2 vars · {date}_{client}_…│"
"└────────────────────────────────────────────────────────────────────────┘└────────────────────────────────────────────┘"
"                                                                                                                        "
" / search  n new  Enter filter  ? help  c commands                                                                      "
