tests/snapshots/tui_snapshots__template_show.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates   2 bases                                         highest ID0248 "
" → projects 12   archive not mounted                                               ⚠ 1 needs you  ! "
"                                                                                                    "
" ⌕ / to search the templates                                                                    3/3 "
"┌ templates ─────────────────────────┐┌ general ───────────────────────────────────────────────────┐"
"│  client-project    4               ││ General                                                    │"
"│  general           4               ││   Slug:    general                                         │"
"│  music-video       4               ││   Pattern: {date}_{name}_{id}                              │"
"│                                    ││   ID:      ID0000                                          │"
"│                                    ││                                                            │"
"│                                    ││ Variables:                                                 │"
"│                                    ││   • name (required)                                        │"
"│                                    ││     Label:     Project name                                │"
"│                                    ││                                                            │"
"│                                    ││ Folder structure:                                          │"
"│                                    ││ └── 00_Inbox/                                              │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"│                                    ││                                                            │"
"└────────────────────────────────────┘└────────────────────────────────────────────────────────────┘"
"                                                                                                    "
" / search  T templates  → pane  f its projects  Enter edit  n new  H guide  I from a folder         "
