tests/snapshots/tui_snapshots__templates_tab_44x14.snap
---
source: tests/tui_snapshots.rs
assertion_line: 25
expression: frame
---
" fast-folder   library │ templates          "
" → projects 12   archive … ⚠ 1 needs you  ! "
" ⌕ / to search the templates            3/3 "
"┌ templates ───────────────────────────────┐"
"│  client-project    4                     │"
"│  general           4                     │"
"│  music-video       4                     │"
"│                                          │"
"│                                          │"
"│                                          │"
"│                                          │"
"└──────────────────────────────────────────┘"
"                                            "
" → details  / search  T templates           "
